fixed nav-bar collapse

--- a/src/app/header/header.component.css
+++ b/src/app/header/header.component.css
@@ -4,17 +4,8 @@
 .show{
   display:inherit;
 }
-.navbar-nav {
-  flex-direction: row;
-}
 
-.nav-link {
-  padding-right: .5rem !important;
-  padding-left: .5rem !important;
-}
+
 
 /* Fixes dropdown menus placed on the right side */
-.ml-auto .dropdown-menu {
-  left: auto !important;
-  right: 0px;
-}
+
